--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,10 +40,13 @@ a:visited, a:hover {
     margin-left: 20%;
 }
 .photoGallery {
+    margin:auto;
+    width: 60%;
     display: flex; 
     flex-wrap: wrap; 
     gap: 10px; 
     padding: 10px;
+    justify-content: center;
 }
 .photoGallery img {
     flex: 1 1 auto;
