--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,12 +11,16 @@ body {
     color: hsl(0, 0%, 80%);
 }
 #pageTitle {
+    display: block;
     margin-top: 20pt;
     color: hsl(0, 0%, 80%);
+    text-align: center;
 }
 table {
     width: 60%;
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
 }
 th, td {
     border: 0px;
