--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,9 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
+table tr:nth-child(even) {
+    background-color: hsl(0, 0%, 25%);
+}
 th, td {
     border: 0px;
     text-align: left;
