--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,3 +72,55 @@ a:visited, a:hover {
     padding: 5px; 
     color: hsl(0, 0%, 80%); 
 }
+
+.contactForm {
+    width: 60%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    background-color: hsl(0, 0%, 10%);
+    border-radius: 2px;
+    box-sizing: border-box;
+}
+
+.contactForm label {
+    color: hsl(0, 0%, 80%);
+    font-size: 1.2em;
+}
+
+.contactForm input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid hsl(0, 0%, 40%);
+    border-radius: 2px;
+    background-color: hsl(0, 0%, 20%);
+    color: hsl(0, 0%, 80%);
+    box-sizing: border-box;
+}
+
+.contactForm textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid hsl(0, 0%, 40%);
+    border-radius: 2px;
+    background-color: hsl(0, 0%, 20%);
+    color: hsl(0, 0%, 80%);
+    box-sizing: border-box;
+    overflow-y: scroll;
+    resize: none;
+}
+
+.contactForm button {
+    padding: 10px 15px;
+    border: none;
+    background-color: hsla(0, 100%, 50%, 0.75);
+    color: hsl(0, 0%, 80%);
+    font-size: 1.2em;
+    transition: background-color 0.3s;
+}
+
+.contactForm button:hover {
+    background-color: hsla(0, 100%, 50%, 0.5);
+}
