--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,7 +82,7 @@ a:visited, a:hover {
     gap: 10px;
     padding: 20px;
     background-color: hsl(0, 0%, 10%);
-    border-radius: 2px;
+    border-radius: 3px;
     box-sizing: border-box;
 }
 
@@ -99,7 +99,7 @@ a:visited, a:hover {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid hsl(0, 0%, 40%);
-    border-radius: 2px;
+    border-radius: 3px;
     background-color: hsl(0, 0%, 20%);
     color: hsl(0, 0%, 80%);
     font-size: 16px;
@@ -146,4 +146,38 @@ a:visited, a:hover {
 
 input:invalid + .error-message {
     display: block;
+}
+
+#tableButton {
+    margin-left: 20%;
+    margin-top: 10px;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 3px;
+    background-color: hsla(0, 100%, 50%, 0.75);
+    color: hsl(0, 0%, 80%);
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#tableButton:hover {
+    background-color: hsla(0, 100%, 50%, 0.5);
+}
+
+#themeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px 20px;
+    background-color: hsl(211, 100%, 50%);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#themeButton:hover {
+background-color: hsl(211, 100%, 65%);
 }
